--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
 		"autoprefixer": "^10.4.19",
+		"date-picker-svelte": "^2.13.0",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -44,6 +45,7 @@
 		"flatpickr": "^4.6.13",
 		"mysql2": "^3.10.1",
 		"svelte-datepicker": "^1.0.0",
+		"svelte-select": "^5.8.3",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1"
 	}
