--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"mysql2": "^3.10.1",
 		"svelte-datepicker": "^1.0.0",
 		"svelte-select": "^5.8.3",
+		"sweetalert2": "^11.12.2",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1"
 	}
