--- a/package.json
+++ b/package.json
@@ -20,19 +20,18 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
-		"autoprefixer": "^10.4.19",
-		"date-picker-svelte": "^2.13.0",
+		"autoprefixer": "^10.4.20",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
+		"flowbite": "^2.5.2",
+		"flowbite-svelte": "^0.47.4",
 		"globals": "^15.0.0",
-		"postcss": "^8.4.38",
+		"postcss": "^8.4.49",
 		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"prettier-plugin-tailwindcss": "^0.6.4",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
-		"tailwindcss": "^3.4.4",
+		"tailwindcss": "^3.4.17",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0-alpha.20",
@@ -42,11 +41,8 @@
 	"type": "module",
 	"dependencies": {
 		"daisyui": "^4.12.10",
-		"flatpickr": "^4.6.13",
 		"mysql2": "^3.10.1",
-		"svelte-datepicker": "^1.0.0",
 		"svelte-select": "^5.8.3",
-		"sweetalert2": "^11.12.2",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1"
 	}
