--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ node_modules
 Thumbs.db
 
 # Env
-.env
+.env``
 .env.*
 !.env.example
 !.env.test
@@ -22,9 +22,4 @@ vite.config.ts.timestamp-*
 package-lock.json
 
 /src/lib/db/mysql.js
-<<<<<<< HEAD
 static/uploads
-=======
-package-lock.json
-package.json
->>>>>>> cf6e416ae4c1b6de9a5d09d0703b33eb1544a5e7
