--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"cloudinary": "^2.5.1",
 		"daisyui": "^4.12.10",
 		"mysql2": "^3.10.1",
 		"svelte-select": "^5.8.3",
 		"tailwind-merge": "^2.3.0",
-		"tailwind-variants": "^0.2.1"
+		"tailwind-variants": "^0.2.1",
+		"vercel": "^41.0.2"
 	}
 }
